[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
# 基础依赖
rand = "0.8"
mio = { version = "0.8", features = ["os-poll", "net"] }
crossbeam-channel = "0.5"
tokio = { version = "1.35", features = ["full"] }

# 可选依赖
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"], optional = true }
chrono = { version = "0.4", optional = true }

# 过程宏依赖
cli_macro = { path = "./cli_macro" }
zerocopy = { version = "0.8.42", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# 特性标志
[features]
default = []
async = ["futures", "async-trait"]
web = ["axum", "serde", "serde_json", "chrono"]
db = ["sqlx", "serde", "serde_json"]
all = ["async", "web", "db"]

[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[[bin]]
name = "async"
path = "src/bin/async.rs"
required-features = ["async"]

[[bin]]
name = "web"
path = "src/bin/web.rs"
required-features = ["web"]

[[bin]]
name = "db"
path = "src/bin/db.rs"
required-features = ["db"]

[[bin]]
name = "all"
path = "src/bin/all.rs"
required-features = ["all"]

[[bin]]
name = "cli"
path = "src/bin/cli/main.rs"
dependencies = ["cli_macro"]

[[bin]]
name = "mini-runtime"
path = "src/bin/mini_runtime.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[lib]
name = "rust_learning"
path = "src/lib.rs"

